// Vitest Snapshot v1

exports[`Pagination.vue > renders OXD Pagination 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <!--v-if-->
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with |1|, 2, 3, 4, 5 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <!--v-if-->
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with |17|, 18, 19, 20, 21 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">15</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">16</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 1, |2|, 3, 4, 5 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 1, 2, |3|, 4, 5 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 1, 2, 3, |4|, 5, 6 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">6</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 17, |18|, 19, 20, 21 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">16</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">20</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 17, 18, |19|, 20, 21 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">20</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">21</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 17, 18, 19, |20|, 21 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">20</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">21</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with 17, 18, 19, 20, |21| 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">20</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">21</button></li>
    <!--v-if-->
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with current 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-left\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">17</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">18</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">19</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">20</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">21</button></li>
    <!--v-if-->
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with length < max 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <!--v-if-->
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;

exports[`Pagination.vue > should renders OXD Pagination with length > max 1`] = `
"<nav role=\\"navigation\\" aria-label=\\"Pagination Navigation\\" data-v-d540d5dc=\\"\\">
  <ul class=\\"oxd-pagination__ul\\" data-v-d540d5dc=\\"\\">
    <!--v-if-->
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page oxd-pagination-page-item--page-selected\\" data-v-c3c32be7=\\"\\">1</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">2</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">3</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">4</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">5</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--page\\" data-v-c3c32be7=\\"\\">6</button></li>
    <li data-v-c3c32be7=\\"\\" data-v-d540d5dc=\\"\\"><button type=\\"button\\" class=\\"oxd-pagination-page-item oxd-pagination-page-item--previous-next\\" data-v-c3c32be7=\\"\\"><i class=\\"oxd-icon bi-chevron-right\\" data-v-85cde8ca=\\"\\" data-v-c3c32be7=\\"\\"></i></button></li>
  </ul>
</nav>"
`;
